# SibSUTIS-Bachelor

./: README.md
1 семестр/: README.md  ИП811-813 расписание.docx
1 семестр/информатика/: вычитаение 1.TXT
2 семестр/: README.md
2 семестр/TRPO/: README.md
2 семестр/физика/: Fizika_2_semestr_1__kopia.docx
3 семестр/: README.md  ИП811-813 расписание 2019.docx
3 семестр/Интернет технологии/: Лаборторные_работы.doc  задания.rar
3 семестр/ЭЭиС/: lab1.docx  lab2.docx
4 семестр/: Ip811-813 расписание.docx  README.md
4 семестр/Вычмат/: Лекции ВМ.docx  Сборник дз.docx
4 семестр/ОВП/: Методичка по ЛР ОВП на Си шарп.docx  Разработка Windows Forms приложений.docx
4 семестр/Тервер/: TViMS_DZ_10.doc  TViMS_DZ_12.doc  TViMS_DZ_14.doc  TViMS_DZ_15.doc  ТВиМС_ДЗ_11.doc  ТВиМС_ДЗ_13.doc
4 семестр/Учебная практика/: Бурдуковский И.А. Отчёт по Учебной Практике.docx
4 семестр/ЭВМ/lab/: CMakeLists.txt  SimpleComputerTest.cpp  SimpleComputerTest.h  TerminalTest.cpp  echo.txt  main.cpp  mySimpleComputer.cpp  mySimpleComputer.h  myTerminal.cpp  myTerminal.h
4 семестр/ЭВМ/курсовые/EVM/: .gitignore  CMakeLists.txt
4 семестр/ЭВМ/курсовые/EVM/lib/BigChars/: myBigChars.cpp  myBigChars.h
4 семестр/ЭВМ/курсовые/EVM/lib/CU/: CU.cpp  CU.h
4 семестр/ЭВМ/курсовые/EVM/lib/CellChange/: SetVariables.cpp  SetVariables.h
4 семестр/ЭВМ/курсовые/EVM/lib/Computer/: DisplayInterface.cpp  DisplayInterface.h
4 семестр/ЭВМ/курсовые/EVM/lib/ReadKeys/: myReadKeys.cpp  myReadKeys.h
4 семестр/ЭВМ/курсовые/EVM/lib/SA/: SimpleAssembler.cpp  SimpleAssembler.h
4 семестр/ЭВМ/курсовые/EVM/lib/SB/: SimpleBasic.cpp  SimpleBasic.h
4 семестр/ЭВМ/курсовые/EVM/lib/SignalHandler/: signals.cpp  signals.h
4 семестр/ЭВМ/курсовые/EVM/lib/SimpleComputer/: mySimpleComputer.cpp  mySimpleComputer.h
4 семестр/ЭВМ/курсовые/EVM/lib/Terminal/: myTerminal.h
4 семестр/ЭВМ/курсовые/EVM/src/EVM/: main.cpp
4 семестр/ЭВМ/курсовые/EVM/src/SAT/: sat.cpp
4 семестр/ЭВМ/курсовые/EVM/src/SBT/: sbt.cpp
4 семестр/ЭВМ/курсовые/EVM/src/lab2/: SimpleComputerTest.cpp
4 семестр/ЭВМ/курсовые/EVM/src/lab3/: TerminalTest.cpp  TerminalTest.h
5 семестр/: Ip811-813 расписание.docx  README.md
5 семестр/АВС/: 123.sh  (+1 more)
6 семестр/: README.md
7 семестр/: README.md  ИП-811-813 расписание.docx
8 семестр/: README.md  ИП 811, 812, 813 расписание.docx
(+1289 files in other folders)
